@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n1.c	1.37 (gritter) 9/11/05
+ * Sccsid @(#)n1.c	1.38 (gritter) 9/16/05
  */
 
 /*
@@ -1121,21 +1121,18 @@ g2:
 			mbstate_t	state;
 			memset(&state, 0, sizeof state);
 			if ((n = mbrtowc(&twc, mbbuf1, mbbuf1p-mbbuf1, &state))
-					==(size_t)-1) {
+					==(size_t)-1 ||
+					twc & ~(wchar_t)0177777) {
 				mbbuf1p = mbbuf1;
 				*mbbuf1p = 0;
 				i &= 0177;
 			} else if (n == (size_t)-2)
 				goto again;
 			else {
-				int	f;
 				mbbuf1p = mbbuf1;
 				*mbbuf1p = 0;
-				if ((i = un2tr(twc, &f)) != 0) {
-					i |= chbits & ~FMASK;
-					setfbits(i, f);
-					goto g4;
-				}
+				i = twc | COPYBIT;
+				goto g4;
 			}
 		} else {
 			mbbuf1p = mbbuf1;
@@ -1195,6 +1192,15 @@ g2:
 		goto again;
 	}
 g4:
+#ifndef	NROFF
+	if (!copyf && iscopy(i)) {
+		int	f;
+		if ((i = un2tr(cbits(i), &f)) != 0) {
+			i |= chbits & ~FMASK;
+			setfbits(i, f);
+		}
+	}
+#endif
 #ifndef EUC
 	if (copyf == 0 && (i & ~BYTEMASK) == 0)
 #else
