@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.1 (gritter) 9/15/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.2 (gritter) 9/16/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.1 (gritter) 9/15/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.2 (gritter) 9/16/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -17,7 +17,7 @@ ext.h: * Sccsid @(#)ext.h	1.26 (gritter) 9/13/05
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.37 (gritter) 9/11/05
+n1.c: * Sccsid @(#)n1.c	1.38 (gritter) 9/16/05
 n2.c: * Sccsid @(#)n2.c	1.10 (gritter) 9/11/05
 n3.c: * Sccsid @(#)n3.c	1.48 (gritter) 9/13/05
 n4.c: * Sccsid @(#)n4.c	1.12 (gritter) 9/5/05
@@ -28,7 +28,7 @@ n9.c: * Sccsid @(#)n9.c	1.21 (gritter) 9/13/05
 ni.c: * Sccsid @(#)ni.c	1.15 (gritter) 9/6/05
 nii.c: * Sccsid @(#)nii.c	1.16 (gritter) 9/11/05
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.43 (gritter) 9/11/05
+tdef.h: * Sccsid @(#)tdef.h	1.44 (gritter) 9/16/05
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.19 (gritter) 9/11/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.20 (gritter) 9/11/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.20 (gritter) 9/13/05
